Fix some styling issues (small screen, dark mode)

--- a/src/components/Main/Panel.module.css
+++ b/src/components/Main/Panel.module.css
@@ -18,8 +18,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    background: var(--black);
-    color: var(--white);
+    background: var(--button-bg);
+    color: var(--button-text);
     writing-mode: vertical-lr;
     text-transform: uppercase;
   }
