--- a/src/components/Main/Result/index.module.css
+++ b/src/components/Main/Result/index.module.css
@@ -4,31 +4,44 @@
 
 .level {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   gap: calc(var(--space) / 2);
-  margin-bottom: calc(var(--space) / 2);
+  margin-bottom: var(--space);
   transition: opacity 200ms;
-}
 
-.result {
-  white-space: nowrap;
-  text-align: center;
-
-  & > h3 {
-    margin-bottom: 0.25rem;
+  @media (width >= 640px) {
+    flex-direction: row;
   }
 }
 
+.result {
+  display: flex;
+  gap: 0.25rem;
+  align-items: center;
+  flex-direction: row;
+  white-space: nowrap;
+}
+
 .details {
+  --row-length: 12;
+  @media (width >= 640px) {
+    --row-length: 15;
+  }
+  @media (width >= 768px) {
+    --row-length: 20;
+  }
+
   display: grid;
   gap: 0.25rem;
-  grid-template-columns: repeat(20, 1rem);
+  grid-template-columns: repeat(var(--row-length), 1rem);
   grid-auto-rows: 1rem;
 
   & > span {
-    border: 2px solid var(--black);
+    border: 2px solid var(--game-border);
     border-radius: 0.25rem;
+    background: var(--white);
 
     &:is([data-result="1"]) {
       background: var(--green);
